# geekbench_report_automation

./: .gitignore  README.md  pyproject.toml  update-gcp-firewall.sh
legacy_scripts/: migrate_pg_to_bq.py
scripts/: run_all_deployments.py
src/deployments/: sync_bq_to_googlesheets_deployment.py  sync_cpu_model_benchmark_to_bq_deployment.py  sync_cpu_model_detail_to_bq_deployment.py  sync_cpu_model_name_to_bq_deployment.py  sync_cpu_model_result_to_bq_deployment.py  test_deployment.py
src/flows/: sync_bq_to_googlesheets_flow.py  sync_cpu_model_benchmark_to_bq_flow.py  sync_cpu_model_benchmark_to_pg.py  sync_cpu_model_benchmark_to_pg_flow.py  sync_cpu_model_detail_to_bq_flow.py  sync_cpu_model_detail_to_pg.py  sync_cpu_model_name_to_bq_flow.py  sync_cpu_model_name_to_pg.py  sync_cpu_model_result_to_bq_flow.py  sync_cpu_model_result_to_pg.py  sync_pg_to_googlesheets.py  test_flow.py
src/utils/: bigquery_utility.py  googlesheets_utility.py
src/utils/core/: bigquery_helper.py
src/utils/core/sql/: mart_average_score_and_benchmark_score.py
